feat(4-week): добавил ручку для logout; добавил черный список для невалидных JWT-токенов
