# 4-week/api/v1/openapi.yaml
@@ -117,6 +117,17 @@ paths:
           $ref: '#/components/responses/Unauthorized'
         '500':
           $ref: '#/components/responses/InternalServerError'
+  /api/v1/auth/logout:
+    post:
+      tags: ["Аутентификация 🔐"]
+      summary: Выход пользователя
+      description: Добавляет текущий access token в blacklist и делает его недействительным для последующей аутентификации.
+      operationId: logout
+      responses:
+        '204':
+          description: Пользователь успешно вышел. Тело ответа пустое.
+        '401':
+          $ref: '#/components/responses/Unauthorized'
   /api/v1/users:
     get:
       tags: ["Пользователи 👥"]
