# 4-week/internal/adapters/transport/http/v1/auth/routes.go
@@ -7,4 +7,5 @@ func RegisterRoutes(r chi.Router, service Service) {
 
 	r.Post("/auth/register", h.Register)
 	r.Post("/auth/login", h.Login)
+	r.Post("/auth/logout", h.Logout)
 }
